rapport.css
.slider1 {
    --sliderSize: 15px;
    --sliderColor1: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(200, 200, 200, 1);



}


.slider2 {
    --sliderSize: 15px;
    --sliderColor2: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0);




}
.slider3 {
    --sliderSize: 15px;
    --sliderColor3: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0);



}
.slider4 {
    --sliderSize: 15px;
    --sliderColor4: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0);



}
.slider5 {
    --sliderSize: 15px;
    --sliderColor5: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0);




}
.slider6 {
    --sliderSize: 15px;
    --sliderColor6: #111111;
    -webkit-appearance: none;
    width: 40%;
    height: 15px;
    border-radius: 5px;
    background: rgba(255, 255, 255, 0);


}



.slider1::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor1);
    opacity: 1;

}

.slider2::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor2);
    opacity: 1;
}

.slider3::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor3);
    opacity: 1;
}

.slider4::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor4);
    opacity: 1;
}

.slider5::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor5);
    opacity: 1;
}

.slider6::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: var(--sliderSize);
    height: var(--sliderSize);
    border-radius: 50%;
    background: var(--sliderColor6);
    opacity: 1;
}



.url2 {
    transform: translate(0px, -231px)
}

.url3 {
    transform: translate(0px, -462px)
}

.url4 {
    transform: translate(0px, -693px)
}

.url5 {
    transform: translate(0px, -924px)
}

.url6 {
    transform: translate(0px, -1155px)
}

.labelsliderleft {
    margin-left: 0px;
    float: left
}

.labelsliderright {
    margin-right: 0px;
    float: right
}

.navnurl1 {
    --labelColor1;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor1);
    transform: translate(0px, -260px)
}

.navnurl2 {
    --labelColor2;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor2);
    transform: translate(0px, -260px)
}

.navnurl3 {
    --labelColor3;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor3);
    transform: translate(0px, -260px)
}

.navnurl4 {
    --labelColor4;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor4);
    transform: translate(0px, -260px)
}

.navnurl5 {
    --labelColor5;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor5);
    transform: translate(0px, -260px)
}

.navnurl6 {
    --labelColor6;
    float: top;
    display: block;
    font-weight: bold;
    background: var(--labelColor6);
    transform: translate(0px, -260px)
}

